app/ponger/manifests/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ponger
  namespace: default
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ponger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ponger
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: ponger
      containers:
      - name: ponger
        image: library/ponger:latest
        imagePullPolicy: Never # required for k3d imported images
        resources:
          limits:
            memory: 100Mi
          requests:
            memory: 100Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /ping
            scheme: HTTPS
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ping
            scheme: HTTPS
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: certs
          mountPath: /certs
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: server-tls
---
apiVersion: v1
kind: Service
metadata:
  name: pong
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: ponger
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ponger-ingress-from-pinger
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ponger
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: pinger
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pinger-egress-to-ponger
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pinger
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: ponger
    ports:
    - protocol: TCP
      port: 8080
